kubernetes/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: template-grpc-http
  name: template-grpc-http-svc
  namespace: default
  annotations:
    configuration.konghq.com: proxy-timeout-120s
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8081
    - name: grpc
      port: 8082
    - name: metrics
      port: 8083
  selector:
    app: template-grpc-http
